chore: prevents RenderTitle layout shift

--- a/packages/payload/src/admin/components/elements/DocumentHeader/TitleAndTabs/index.scss
+++ b/packages/payload/src/admin/components/elements/DocumentHeader/TitleAndTabs/index.scss
@@ -11,4 +11,8 @@
     line-height: 1.25;
     margin: 0;
   }
+
+  @include mid-break {
+    padding-bottom: calc(var(--base) / 2);
+  }
 }
